# SEQ-MC-4

./: .gitignore  CLAUDE.md  CMakeLists.txt  SEQ-MC-4-Guide.md
Source/: DataModel.h  PlaybackEngine.cpp  PlaybackEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: build.sh
